--- a/Kubernetes-Manifests-file/Frontend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Frontend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: frontend
-        image: 483216680875.dkr.ecr.us-east-1.amazonaws.com/frontend:6
+        image: 862962260514.dkr.ecr.ap-south-1.amazonaws.com/reponame:30
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
