--- a/Kubernetes-Manifests-file/ingress.yaml
+++ b/Kubernetes-Manifests-file/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: narni.co.in
+    - host: myconsole.shop
       http:
         paths:
           - path: /api
